fixed weird image alignment in sponsor sect, added some padding

--- a/css/main.css
+++ b/css/main.css
@@ -226,6 +226,7 @@ nav ul li {
 #sponsor {
   width: 85%;
   margin: 0 auto;
+  padding: 25px 0 25px 0;
 }
 #sponsor h2  {
   text-align:center;
@@ -238,6 +239,17 @@ nav ul li {
 }
 .sponsor-tiles .price{
   font-weight: normal;
+  padding: 5px;
+}
+.sponsor-tiles img {
+  width: 90%;
+  margin: 0 auto;
+  max-width: 315px;
+}
+.sponsor-tiles .content-wrapper {
+  background-color: white;
+  padding: 0 30px 0 30px;
+  margin: 15px;
 }
 
 /*Aside/signup*/
@@ -379,6 +391,7 @@ footer {
     flex-flow: row wrap;
     justify-content: space-between;
     height: 110px;
+    padding-top: 0;
   }
   header img {
     padding-left: 30px;
@@ -396,10 +409,19 @@ footer {
 
   }
   /*sponsor section*/
+  #sponsor {
+    padding: 45px 0 45px 0;
+  }
   .sponsor-tiles {
-    justify-content: space-between;
+    justify-content: center;
     flex-flow: row wrap;
 
+  }
+
+  .sponsor-tiles img {
+    width: 100%;
+    max-width: 260px;
+    height: 230px;
   }
   #sponsor p {
     width: 75%;
